Add member search endpoint
